<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="koelkastapp.projectgroepje4.com.koelkastapp.MenuActivity"
    android:orientation="vertical">

    <!-- Title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            style="@style/title"
            android:text="@string/app_name"/>

    </RelativeLayout>

    <!-- Menu -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/koelkastMenuItem"
            style="@style/menuItem"
            android:text="@string/menu_item_koelkast"/>

        <TextView
            android:id="@+id/vriezerMenuItem"
            style="@style/menuItem"
            android:text="@string/menu_item_vriezer"/>

        <TextView
            android:id="@+id/kastMenuItem"
            style="@style/menuItem"
            android:text="@string/menu_item_kast"/>

        <TextView
            android:id="@+id/boodschappenlijstMenuItem"
            style="@style/menuItem"
            android:text="@string/menu_item_boodschappenlijst"/>

    </LinearLayout>

</LinearLayout>
