<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToKoelkastActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator" />


    <TextView
        style="@style/title"
        android:text="@string/add"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product"
        android:paddingBottom="20dp"
        android:maxLength="40"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:id="@+id/spin"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/houdbaarheidsdatum"
        android:paddingBottom="20dp"
        android:maxLength="40"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>

</LinearLayout>